--- a/stories/css/global.css
+++ b/stories/css/global.css
@@ -1,5 +1,5 @@
 html {
-  font-family: "Inter", sans-serif;
+  font-family: "Figtree", sans-serif;
   font-optical-sizing: auto;
   font-weight: 350;
   font-style: normal;
