feat(avis): Ajout d'une option pour afficher les avis en pleine largeur via un attribut booléen "fluide"

--- a/src/components/bib-avis/bib-avis.scss
+++ b/src/components/bib-avis/bib-avis.scss
@@ -1,8 +1,5 @@
 @use '../../scss/states';
 
-.btn-close {
-}
-
 :host,
 * {
   box-sizing: border-box;
@@ -21,10 +18,13 @@
 .inner {
   display: flex;
   align-items: center;
-  max-width: 1220px;
   margin: 0 auto;
   padding: 11px 19px;
   gap: 1em;
+
+  :host(:not([fluide])) & {
+    max-width: 1220px;
+  }
 }
 
 .message {
