--- a/src/components/udem-urgence/udem-urgence.scss
+++ b/src/components/udem-urgence/udem-urgence.scss
@@ -14,7 +14,7 @@
   font-size: 13px;
   box-sizing: border-box;
 
-  :host([grand]) & {
+  &.big {
     height: 168px;
   }
 }
@@ -26,7 +26,7 @@
   position: relative;
   bottom: 0;
 
-  :host([grand]) & {
+  .big & {
     height: 161px;
   }
 }
@@ -39,7 +39,7 @@
   height: 48px;
   width: auto;
 
-  :host([grand]) & {
+  .big & {
     height: 113px;
   }
 
@@ -63,7 +63,7 @@
   color: #fff;
   text-decoration: none;
 
-  :host([grand]) & {
+  .big & {
     margin-left: 0;
     position: static;
     max-height: 101px;
@@ -85,7 +85,7 @@
   margin: 0;
   text-transform: uppercase;
 
-  :host([grand]) & {
+  .big & {
     top: 113px;
     line-height: 36px;
   }
