feat(bib-retroaction-usager): Ajout d'une variable css pour le font-weight de l'intitulé

--- a/src/components/bib-retroaction-usager/bib-retroaction-usager.scss
+++ b/src/components/bib-retroaction-usager/bib-retroaction-usager.scss
@@ -32,7 +32,7 @@ input {
 
 .survey-title {
   margin-bottom: var(--_size-large);
-  font-weight: 450;
+  font-weight: var(--bib-comp-retroaction-usager-title-weight, var(--md-sys-typescale-title-medium-weight, 450));
 }
 
 .radio-group {
