--- a/src/components/bib-consent/bib-consent-dialog.scss
+++ b/src/components/bib-consent/bib-consent-dialog.scss
@@ -10,6 +10,9 @@
 
 @include layers.component {
   :host {
+    --_consent-container-height: 450px;
+    --_consent-container-max-height: 80%;
+    --_consent-container-height-sm: auto;
     --_consent-text-size: 14.62px;
     --_consent-text-line-height: 17.5px;
     --_consent-title-text-size: 18px;
@@ -19,6 +22,11 @@
     line-height: var(--_consent-text-line-height);
   }
 
+  :host(.preferences) {
+    --_consent-container-height: 80%;
+    --_consent-container-height-sm: 450px;
+  }
+
   .btn-close-modal {
     position: absolute;
     right: 10px;
@@ -26,44 +34,31 @@
     z-index: 10;
   }
 
-  .modal-container {
+  .dialog {
     border-top: 10px solid #0b113a;
+    top: auto;
     bottom: 0;
     color: #0b113a;
     background: #e5f0f8;
-    height: 450px;
-    max-height: 80%;
+    height: var(--_consent-container-height);
+    max-height: var(--_consent-container-max-height);
     text-align: left;
     overflow: hidden;
     position: fixed;
     width: 100%;
 
     @media screen and (min-width: 640px) {
-      height: auto;
-    }
-  }
-
-  .content-container {
-    font-size: var(--_consent-text-size);
-    height: 100%;
-    line-height: var(--_consent-text-line-height);
-    margin: 0 auto;
-    max-width: 1200px;
-    padding: 60px 35px 25px;
-    z-index: 0;
-
-    @media screen and (min-width: 640px) {
-      height: 450px;
-    }
-    //x-sm
-    @media screen and (min-width: 375px) {
-      padding: 50px 35px 25px;
+      height: var(--_consent-container-height-sm);
     }
 
-    //sm
-    @media screen and (min-width: 640px) {
-      height: auto;
-      padding: 50px 50px 20px;
+    &::backdrop {
+      background-color: #00000080;
+    }
+
+    &-container {
+      display: flex;
+      height: 100%;
+      justify-content: center;
     }
   }
 }
