feat(bib-consent): Correction mineure des marges de la boîte de contenu des dialogues.

--- a/src/components/bib-consent/_content.scss
+++ b/src/components/bib-consent/_content.scss
@@ -6,9 +6,9 @@
     font-size: var(--_consent-text-size);
     height: auto;
     line-height: var(--_consent-text-line-height);
-    margin: 0 auto !important;
+    margin: 10px auto !important;
     max-width: 1200px;
-    padding: 0 35px 25px;
+    padding: 0 35px 15px;
     z-index: 0;
     position: absolute;
     top: 50px;
