--- a/src/components/bib-consent/bib-consent-preferences-dialog.scss
+++ b/src/components/bib-consent/bib-consent-preferences-dialog.scss
@@ -3,6 +3,7 @@
 @use '@/scss/tokens/ref-typeface';
 @use 'theme';
 @use 'content';
+@use 'button';
 @use 'accordion';
 @use 'switch';
 
@@ -19,11 +20,28 @@
 }
 
 @include layers.component {
-  .preferences {
+  .dialog-container--preferences {
     position: fixed;
     bottom: 0;
     height: 400px;
     display: block;
     width: 100%;
+  }
+
+  .personalized-cookies-description p {
+    padding: 0 15px 20px 0;
+  }
+
+  .btn-consent {
+    width: 100%;
+
+    //sm
+    @media screen and (min-width: 640px) {
+      width: auto;
+    }
+  }
+
+  .actions-container {
+    margin-top: 20px;
   }
 }
