--- a/src/components/bib-consent/bib-consent-dialog.scss
+++ b/src/components/bib-consent/bib-consent-dialog.scss
@@ -2,6 +2,7 @@
 @use '@/scss/reset';
 @use '@/scss/theme';
 @use '@/scss/tokens/ref-typeface';
+@use 'scrollbar';
 
 @include layers.order;
 
@@ -10,9 +11,10 @@
 
 @include layers.component {
   :host {
-    --_consent-container-height: 450px;
-    --_consent-container-max-height: 80%;
-    --_consent-container-height-sm: auto;
+    --_consent-dialog-height: 450px;
+    --_consent-dialog-max-height: 80%;
+    --_consent-dialog-height-sm: auto;
+    --_consent-content-height: 100%;
     --_consent-text-size: 14.62px;
     --_consent-text-line-height: 17.5px;
     --_consent-title-text-size: 18px;
@@ -22,14 +24,15 @@
     line-height: var(--_consent-text-line-height);
   }
 
-  :host(.preferences) {
-    --_consent-container-height: 80%;
-    --_consent-container-height-sm: 450px;
+  :host(.preferences-dialog) {
+    --_consent-dialog-height: 80%;
+    --_consent-dialog-height-sm: 450px;
+    --_consent-content-height: auto;
   }
 
-  .btn-close-modal {
+  .btn-close {
     position: absolute;
-    right: 10px;
+    right: 15px;
     top: 15px;
     z-index: 10;
   }
@@ -40,15 +43,17 @@
     bottom: 0;
     color: #0b113a;
     background: #e5f0f8;
-    height: var(--_consent-container-height);
-    max-height: var(--_consent-container-max-height);
+    height: var(--_consent-dialog-height);
+    max-height: var(--_consent-dialog-max-height);
     text-align: left;
     overflow: hidden;
     position: fixed;
     width: 100%;
+    padding-top: 50px;
+    padding-bottom: 10px;
 
     @media screen and (min-width: 640px) {
-      height: var(--_consent-container-height-sm);
+      height: var(--_consent-dialog-height-sm);
     }
 
     &::backdrop {
@@ -59,6 +64,23 @@
       display: flex;
       height: 100%;
       justify-content: center;
+      overflow-y: auto;
+
+      @include scrollbar.scrollbar;
+    }
+  }
+
+  .content-container {
+    height: var(--_consent-content-height);
+    margin: 0 auto;
+    max-width: 1200px;
+    padding: 0 35px 15px;
+    z-index: 0;
+
+    // >= sm
+    @media screen and (min-width: 640px) {
+      height: auto;
+      padding: 0 50px 20px;
     }
   }
 }
