--- a/src/components/bib-consent/bib-consent-server.scss
+++ b/src/components/bib-consent/bib-consent-server.scss
@@ -41,7 +41,7 @@ h1 {
   tab-size: 8;
   outline: none;
   // overflow: auto hidden;
-  // height: 1200px;
+  height: 100px;
   // font-size: 12px;
   line-height: 20px;
   overflow-wrap: normal;
