Finalisation du composant bib-consent

--- a/src/components/bib-consent/bib-consent-consent-dialog.scss
+++ b/src/components/bib-consent/bib-consent-consent-dialog.scss
@@ -14,3 +14,10 @@
     margin: 0;
   }
 }
+
+@include layers.component {
+  ::part(dialog)::backdrop {
+    outline: 10px solid #da042b;
+    outline-offset: -10px;
+  }
+}
