--- a/src/components/bib-consent/bib-consent-dialog.scss
+++ b/src/components/bib-consent/bib-consent-dialog.scss
@@ -51,6 +51,7 @@
     width: 100%;
     padding-top: 50px;
     padding-bottom: 10px;
+    z-index: 10000;
 
     @media screen and (min-width: 640px) {
       height: var(--_consent-dialog-height-sm);
