--- a/src/components/bib-consent/_content.scss
+++ b/src/components/bib-consent/_content.scss
@@ -35,10 +35,11 @@
     display: flex;
     justify-content: center;
     margin: 0 auto;
+    flex-direction: column;
 
     //sm
     @media screen and (min-width: 640px) {
-      display: flex;
+      flex-direction: row;
       justify-content: normal;
       margin: 0;
     }
