--- a/src/components/bib-consent/_button.scss
+++ b/src/components/bib-consent/_button.scss
@@ -5,6 +5,7 @@
   line-height: var(--_consent-text-line-height);
   display: flex;
   justify-content: center;
+  align-items: center;
   font-weight: 500;
   margin: 7.5px auto 0;
   padding: 5px 15px;
@@ -15,6 +16,10 @@
     float: left;
     margin: 7.5px 0 0 7.5px;
     width: auto;
+  }
+
+  @media (max-width: 899px) {
+    height: 40px;
   }
 
   span {
