--- a/src/components/bib-consent/_content.scss
+++ b/src/components/bib-consent/_content.scss
@@ -36,12 +36,14 @@
     justify-content: center;
     margin: 0 auto;
     flex-direction: column;
+    gap: 0.5rem;
 
     //sm
     @media screen and (min-width: 640px) {
       flex-direction: row;
       justify-content: normal;
       margin: 0;
+      gap: 0;
     }
   }
 
