--- a/src/components/bib-avis/bib-avis.scss
+++ b/src/components/bib-avis/bib-avis.scss
@@ -10,7 +10,7 @@
 :host {
   display: block;
   font-size: var(--bib-avis-size, var(--md-sys-typescale-title-medium-size, inherit));
-  background: var(--bib-avis-container-color, var(--md-sys-color-warningContainer, #fffac6));
+  background: var(--bib-avis-container-color, var(--md-sys-color-warningContainer, #ffe8ac));
 }
 
 :host([hidden]) {
@@ -21,12 +21,12 @@
   display: flex;
   align-items: center;
   margin: 0 auto;
-  padding: 0.75rem;
+  padding: 16px;
   gap: 1em;
 
   :host(:not([fluide])) & {
     max-width: 1536px;
-    padding: 0.75rem 64px;
+    padding: 16px 64px;
   }
 }
 
