--- a/src/components/bib-avis/bib-avis.scss
+++ b/src/components/bib-avis/bib-avis.scss
@@ -26,7 +26,7 @@
 
   :host(:not([fluide])) & {
     max-width: 1536px;
-    padding: 16px 64px;
+    padding: 16px var(--bib-avis-spacing-inline, 64px);
   }
 }
 
