--- a/src/components/bib-consent/_button.scss
+++ b/src/components/bib-consent/_button.scss
@@ -10,6 +10,7 @@
   margin: 7.5px auto 0;
   padding: 5px 15px;
   width: 200px;
+  border-radius: 16px;
 
   //sm
   @media screen and (min-width: 640px) {
