--- a/src/components/bib-consent/_button.scss
+++ b/src/components/bib-consent/_button.scss
@@ -30,21 +30,30 @@
 }
 
 @include layers.component {
-  .btn {
+   .btn {
     &--filled {
       @extend %_btn;
-
-      background-color: #0b113a;
+      background-color: #0057ac;
       color: #fff;
+      transition: background-color 0.3s, transform 0.2s;
+
+      &:hover {
+        background-color: #0b113a; 
+      }
     }
 
     &--outlined {
       @extend %_btn;
 
       background-color: transparent;
-      border: 1px solid #0057ac;
+      border: 1px solid #0b113a;
       color: #0b113a;
+      transition: background-color 0.3s, color 0.3s, transform 0.2s;
 
+      &:hover {
+        border: 1px solid #0057ac;
+        color: #0b113a; 
+      }
       @media screen and (min-width: 640px) {
         margin-left: 0;
       }
