--- a/src/components/bib-consent/_content.scss
+++ b/src/components/bib-consent/_content.scss
@@ -10,6 +10,7 @@
     font-size: var(--_consent-title-text-size);
     line-height: var(--_consent-title-text-line-height);
     padding-bottom: 12.5px;
+    font-weight: 500;
   }
 
   .learn-more-container {
