--- a/src/components/bib-consent/_content.scss
+++ b/src/components/bib-consent/_content.scss
@@ -45,14 +45,33 @@
       justify-content: normal;
       margin: 0;
       gap: 0;
-    }
-    .consent-link {
-      margin-top: 0.65rem;
-      margin-right: 0.25rem;
-      text-decoration: underline;
-      font-size: var(--_consent-text-size);
+    } 
   }
+  .consent-link {
+    margin-top: 0.65rem;
+    margin-right: 0.25rem;
+    text-decoration: underline;
+    font-size: var(--_consent-text-size);
+    display: inline-block; 
   }
+
+  /* Supprimer les effets de clic */
+  .consent-link:active,
+  .consent-link:focus,
+  .consent-link:visited {
+    text-decoration: none;
+    color: inherit;
+}
+
+/* Centrage uniquement sur mobile */
+@media (max-width: 768px) {
+  .consent-link {
+    display: block;
+    margin: 0.65rem auto 0; /* centre horizontalement */
+    text-align: center;
+  }
+}
+
 
   .confirm-selection {
     @media screen and (min-width: 640px) {
