--- a/src/components/bib-consent/bib-consent-dialog.scss
+++ b/src/components/bib-consent/bib-consent-dialog.scss
@@ -26,7 +26,7 @@
 
   :host(.preferences-dialog) {
     --_consent-dialog-height: 80%;
-    --_consent-dialog-height-sm: 450px;
+    --_consent-dialog-height-sm: 375px;
     --_consent-content-height: auto;
   }
 
@@ -38,7 +38,7 @@
   }
 
   .dialog {
-    border-top: 5px solid #0b113a;
+    border-top: 10px solid #0b113a;
     top: auto;
     bottom: 0;
     color: #0b113a;
@@ -49,7 +49,7 @@
     overflow: hidden;
     position: fixed;
     width: 100%;
-    padding-top: 15px;
+    padding-top: 1.75rem;
     z-index: 10000;
 
     @media screen and (min-width: 640px) {
