--- a/src/components/bib-consent/_button.scss
+++ b/src/components/bib-consent/_button.scss
@@ -7,15 +7,14 @@
   justify-content: center;
   align-items: center;
   font-weight: 500;
-  margin: 7.5px auto 0;
-  padding: 5px 15px;
+  margin: auto 0;
+  padding: 10px 15px;
   width: 200px;
   border-radius: 16px;
 
   //sm
   @media screen and (min-width: 640px) {
-    float: left;
-    margin: 7.5px 0 0 7.5px;
+    margin: 0;
     width: auto;
   }
 
@@ -30,15 +29,17 @@
 }
 
 @include layers.component {
-   .btn {
+  .btn {
     &--filled {
       @extend %_btn;
       background-color: #0057ac;
       color: #fff;
-      transition: background-color 0.3s, transform 0.2s;
+      transition:
+        background-color 0.3s,
+        transform 0.2s;
 
       &:hover {
-        background-color: #0b113a; 
+        background-color: #0b113a;
       }
     }
 
@@ -48,11 +49,14 @@
       background-color: transparent;
       border: 1px solid #0b113a;
       color: #0b113a;
-      transition: background-color 0.3s, color 0.3s, transform 0.2s;
+      transition:
+        background-color 0.3s,
+        color 0.3s,
+        transform 0.2s;
 
       &:hover {
         border: 1px solid #0057ac;
-        color: #0b113a; 
+        color: #0b113a;
       }
       @media screen and (min-width: 640px) {
         margin-left: 0;
